Added "users" app for login, logout and registration

--- a/FrontEnd/timeline.html
+++ b/FrontEnd/timeline.html
@@ -53,7 +53,7 @@
 	<main>
 		<div class="container wappler-block">
 			<div class="row">
-				<div class="col-12 col-md-8 col-xl-9">
+				<div class="col-12 col-md-8 col-xl-9 mb-3">
 					<div class="card">
 						<div class="card-header">Featured</div>
 						<img class="card-img-top" alt="Card image cap">
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="col-12 col-md-4 col-xl-3">
-					<div class="card sticky-top">
+					<div class="card sticky-top mt-4">
 						<div class="card-body">
 							<h5 class="card-title">Special title treatment</h5>
 							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
